// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile .extension() function - DocumentReference.extension('http://example.org/fhir/StructureDefinition/participation-agreement') 1`] = `
[
  {
    "base": "DocumentReference",
    "compiled": [
      {
        "condition": [
          "extension.url",
          "=",
          "http://example.org/fhir/StructureDefinition/participation-agreement",
        ],
        "path": "extension",
        "resourceType": "DocumentReference",
      },
    ],
    "description": "Search by url for a participation agreement, which is stored in a DocumentReference",
    "name": "part-agree",
    "target": [
      "DocumentReference",
    ],
    "type": "reference",
    "url": "http://hl7.org/fhir/SearchParameter/example-extension",
  },
]
`;

exports[`compile OR operator - CapabilityStatement.title | CodeSystem.title | ConceptMap.title | ImplementationGuide.title | MessageDefinition.title | OperationDefinition.title | StructureDefinition.title | StructureMap.title | TerminologyCapabilities.title | ValueSet.title 1`] = `
[
  {
    "base": "CapabilityStatement",
    "compiled": [
      {
        "path": "title",
        "resourceType": "CapabilityStatement",
      },
    ],
    "description": "Multiple Resources...",
    "name": "title",
    "target": undefined,
    "type": "string",
    "url": "http://hl7.org/fhir/SearchParameter/conformance-title",
  },
  {
    "base": "CodeSystem",
    "compiled": [
      {
        "path": "title",
        "resourceType": "CodeSystem",
      },
    ],
    "description": "Multiple Resources...",
    "name": "title",
    "target": undefined,
    "type": "string",
    "url": "http://hl7.org/fhir/SearchParameter/conformance-title",
  },
  {
    "base": "ConceptMap",
    "compiled": [
      {
        "path": "title",
        "resourceType": "ConceptMap",
      },
    ],
    "description": "Multiple Resources...",
    "name": "title",
    "target": undefined,
    "type": "string",
    "url": "http://hl7.org/fhir/SearchParameter/conformance-title",
  },
  {
    "base": "ImplementationGuide",
    "compiled": [
      {
        "path": "title",
        "resourceType": "ImplementationGuide",
      },
    ],
    "description": "Multiple Resources...",
    "name": "title",
    "target": undefined,
    "type": "string",
    "url": "http://hl7.org/fhir/SearchParameter/conformance-title",
  },
  {
    "base": "MessageDefinition",
    "compiled": [
      {
        "path": "title",
        "resourceType": "MessageDefinition",
      },
    ],
    "description": "Multiple Resources...",
    "name": "title",
    "target": undefined,
    "type": "string",
    "url": "http://hl7.org/fhir/SearchParameter/conformance-title",
  },
  {
    "base": "OperationDefinition",
    "compiled": [
      {
        "path": "title",
        "resourceType": "OperationDefinition",
      },
    ],
    "description": "Multiple Resources...",
    "name": "title",
    "target": undefined,
    "type": "string",
    "url": "http://hl7.org/fhir/SearchParameter/conformance-title",
  },
  {
    "base": "StructureDefinition",
    "compiled": [
      {
        "path": "title",
        "resourceType": "StructureDefinition",
      },
    ],
    "description": "Multiple Resources...",
    "name": "title",
    "target": undefined,
    "type": "string",
    "url": "http://hl7.org/fhir/SearchParameter/conformance-title",
  },
  {
    "base": "StructureMap",
    "compiled": [
      {
        "path": "title",
        "resourceType": "StructureMap",
      },
    ],
    "description": "Multiple Resources...",
    "name": "title",
    "target": undefined,
    "type": "string",
    "url": "http://hl7.org/fhir/SearchParameter/conformance-title",
  },
  {
    "base": "TerminologyCapabilities",
    "compiled": [
      {
        "path": "title",
        "resourceType": "TerminologyCapabilities",
      },
    ],
    "description": "Multiple Resources...",
    "name": "title",
    "target": undefined,
    "type": "string",
    "url": "http://hl7.org/fhir/SearchParameter/conformance-title",
  },
  {
    "base": "ValueSet",
    "compiled": [
      {
        "path": "title",
        "resourceType": "ValueSet",
      },
    ],
    "description": "Multiple Resources...",
    "name": "title",
    "target": undefined,
    "type": "string",
    "url": "http://hl7.org/fhir/SearchParameter/conformance-title",
  },
]
`;

exports[`compile OR operator with same base resource - (ExampleScenario.useContext.value as Quantity) | (ExampleScenario.useContext.value as Range) 1`] = `
[
  {
    "base": "ExampleScenario",
    "compiled": [
      {
        "path": "useContext.valueQuantity",
        "resourceType": "ExampleScenario",
      },
      {
        "path": "useContext.valueRange",
        "resourceType": "ExampleScenario",
      },
    ],
    "description": "A quantity- or range-valued use context assigned to the example scenario",
    "name": "context-quantity",
    "target": undefined,
    "type": "quantity",
    "url": "http://hl7.org/fhir/SearchParameter/ExampleScenario-context-quantity",
  },
]
`;

exports[`compile as - (ConceptMap.source as uri) 1`] = `
[
  {
    "base": "ConceptMap",
    "compiled": [
      {
        "path": "sourceUri",
        "resourceType": "ConceptMap",
      },
    ],
    "description": "The source value set that contains the concepts that are being mapped",
    "name": "source-uri",
    "target": [
      "ValueSet",
    ],
    "type": "reference",
    "url": "http://hl7.org/fhir/SearchParameter/ConceptMap-source-uri",
  },
]
`;

exports[`compile expression with extra whitespaces 1`] = `
[
  {
    "base": "Patient",
    "compiled": [
      {
        "condition": [
          "x.field",
          "=",
          "value",
        ],
        "path": "x",
        "resourceType": "Patient",
      },
    ],
    "description": "test",
    "name": "test",
    "target": undefined,
    "type": "token",
    "url": "http://hl7.org/fhir/SearchParameter/test",
  },
]
`;

exports[`compile fhirPath with broader conditions than xPath 1`] = `
[
  {
    "base": "Device",
    "compiled": [
      {
        "path": "deviceName.name",
        "resourceType": "Device",
      },
      {
        "path": "type.coding.display",
        "resourceType": "Device",
      },
      {
        "path": "type.text",
        "resourceType": "Device",
      },
      {
        "path": "deviceName",
        "resourceType": "Device",
      },
    ],
    "description": "test",
    "name": "device-name",
    "target": undefined,
    "type": "string",
    "url": "http://hl7.org/fhir/SearchParameter/Device-device-name",
  },
]
`;

exports[`compile simple path - Patient.communication.language 1`] = `
[
  {
    "base": "Patient",
    "compiled": [
      {
        "path": "communication.language",
        "resourceType": "Patient",
      },
    ],
    "description": "Language code (irrespective of use value)",
    "name": "language",
    "target": undefined,
    "type": "token",
    "url": "http://hl7.org/fhir/SearchParameter/Patient-language",
  },
]
`;

exports[`compile simple where - Library.relatedArtifact.where(type='predecessor').resource 1`] = `
[
  {
    "base": "Library",
    "compiled": [
      {
        "condition": [
          "relatedArtifact.type",
          "=",
          "predecessor",
        ],
        "path": "relatedArtifact.resource",
        "resourceType": "Library",
      },
    ],
    "description": "What resource is being referenced",
    "name": "predecessor",
    "target": [
      "Account",
      "ActivityDefinition",
    ],
    "type": "reference",
    "url": "http://hl7.org/fhir/SearchParameter/Library-predecessor",
  },
]
`;

exports[`compile simple where url value - Patient.extension.where(url = 'http://hl7.org/fhir/us/core/StructureDefinition/us-core-race').extension.value.code 1`] = `
[
  {
    "base": "Patient",
    "compiled": [
      {
        "condition": [
          "extension.url",
          "=",
          "http://hl7.org/fhir/us/core/StructureDefinition/us-core-race",
        ],
        "path": "extension.extension.value.code",
        "resourceType": "Patient",
      },
      {
        "condition": [
          "extension.url",
          "=",
          "http://hl7.org/fhir/us/core/StructureDefinition/us-core-race",
        ],
        "path": "extension.extension.valueCoding.code",
        "resourceType": "Patient",
      },
    ],
    "description": "test",
    "name": "test",
    "target": undefined,
    "type": "token",
    "url": "http://hl7.org/fhir/SearchParameter/test",
  },
]
`;

exports[`compile where with resolve() is - Person.link.target.where(resolve() is RelatedPerson) 1`] = `
[
  {
    "base": "Person",
    "compiled": [
      {
        "condition": [
          "link.target",
          "resolve",
          "RelatedPerson",
        ],
        "path": "link.target",
        "resourceType": "Person",
      },
    ],
    "description": "The Person links to this RelatedPerson",
    "name": "relatedperson",
    "target": [
      "RelatedPerson",
    ],
    "type": "reference",
    "url": "http://hl7.org/fhir/SearchParameter/Person-relatedperson",
  },
]
`;

exports[`compile xpath explicitly expands choice of data types and fhirPath does not 1`] = `
[
  {
    "base": "Consent",
    "compiled": [
      {
        "path": "source",
        "resourceType": "Consent",
      },
      {
        "path": "sourceAttachment",
        "resourceType": "Consent",
      },
      {
        "path": "sourceReference",
        "resourceType": "Consent",
      },
    ],
    "description": "test",
    "name": "source-reference",
    "target": [
      "ValueSet",
    ],
    "type": "reference",
    "url": "http://hl7.org/fhir/SearchParameter/Consent-source-reference",
  },
]
`;
